--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>"Why I want to become a developer?"</h1>
+	<h1>Why I want to become a developer?</h1>
 	<p>The resason i want to become a developer is, in the present senario the way the IT sector has developed is phenominal. I had a passion to become a software engineer in good recognised company and i want to enhance my skills to develop the company in all aspects and also there is a scope to learn new things from the the colleauges. And finally if there is any mistake from my self i will try to recify the problem and learn new things from the team members and support the team in all the aspects.</p>
     <script type="text/javascript" src="./script.js">
 </script>
